# bnn_benchmarc

./: .gitignore  Dockerfile  pyproject.toml  test_bnn.py  test_cnn.py
bnn/bnn/config/: base_config.py  bcnn_mnist_mcmc_norm.py  bcnn_mnist_svi_laplace.py  bcnn_mnist_svi_norm.py  bcnn_omniglot_svi_uniform.py  bnn_mnist_svi_norm.py
bnn/bnn/methods/: classification.py  factory.py
bnn/bnn/modules/: bcnn.py  bnn.py
bnn/bnn/scripts/: train.py
bnn/bnn/utils/: activation_factory.py  dataset.py  optim_factory.py  torch_utils.py  types.py  weight_dist_factory.py
bnn/config/: base_config.py  bcnn_mnist_svi_laplace.py  bcnn_mnist_svi_laplace_large.py  bcnn_mnist_svi_laplace_small.py  bcnn_mnist_svi_norm.py  bcnn_mnist_svi_uniform.py  bcnn_omniglot_svi_norm.py  bnn_mnist_svi_norm.py
bnn/methods/: classification.py  factory.py
bnn/modules/: bcnn.py  bnn.py
bnn/scripts/: benchmark_svi.py  train.py
bnn/utils/: config_utils.py  dataset.py  guide_factory.py  inference_factory.py  logger.py  model_factory.py  optim_factory.py  torch_utils.py
